k8s_wordpress_mysql/files/wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      nodePort: 30333
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      volumes:
        - name: wordpress-ps
          persistentVolumeClaim:
            claimName: wordpress-pvc
      containers:
        - image: wordpress:4.8-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          resources:
            limits:
              memory: 300M
              cpu: 200m
            requests:
              memory: 150M
              cpu: 100m
          volumeMounts:
            - name: wordpress-ps
              mountPath: /var/www/html
